# bldc_solutions

./: CMakeLists.txt  README.md  main.cpp
resources/: greeting.txt
